--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,7 @@
   <script src="tests/opentip.show.js"></script>
   <script src="tests/opentip.positioning.js"></script>
   <script src="tests/opentip.draw.js"></script>
+  <script src="tests/opentip.ajax.js"></script>
   <script src="tests/utils.js"></script>
   <script src="tests/adapters.js"></script>
   <script src="tests/adapter.native.js"></script>
