Corrected typo and fixed the jQuery reference.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: The free tooltip
           <div class="demo" id="stylesDemo">
             <div class="title">Styles</div>
             <div class="description">
-              We offer a view styles, and it's easy to create your own styles.
+              We offer a few styles, and it's easy to create your own styles.
             </div>
           </div>
           <script type="text/javascript">
@@ -129,11 +129,6 @@ title: The free tooltip
   });</code>
         <br />
         <br />
-        <h2>jQuery</h2>
-        <p>I'm currently working on porting Opentip to <a href="http://ender.no.de">ender</a>. There is a lot to be done, but I guess it will be ready in 2012.</p>
-
-        <br />
-        <br />
         <h2>Documentation</h2>
         <p>
           For further information, please read the <a href="documentation.html">full documentation</a>!<br />
@@ -152,9 +147,10 @@ title: The free tooltip
           <a href="http://prototypejs.org">Prototype</a>, and pretty much every other framework
           I write adapters for (which is pretty easy).
           <br />
-          Check out my work at <a href="https://github.com/enyo/opentip/tree/coffeescript">Github</a>.
+          Check out my work at <a href="https://github.com/enyo/opentip/tree/develop">Github</a>.
           <br />
-          This is going to be a major release (v2.0) so it won't be fully backwards compatible.
+          This is going to be a major release (v2.0) so it won't be fully backwards compatible.<br />
+          It's going to be ready in a few weeks so get back soon!
 
 
         </p>
