Added the note that v2.0 is finished.

--- a/index.html
+++ b/index.html
@@ -142,15 +142,15 @@ title: The free tooltip
         <h2>Other</h2>
         <p>
 
-          I'm currently rewriting Opentip to use adapters which enables it to
+          I've finished rewriting Opentip to use adapters which enables it to
           work with <a href="http://jquery.com">jQuery</a>, <a href="http://ender.no.de/">Ender</a>, 
           <a href="http://prototypejs.org">Prototype</a>, and pretty much every other framework
-          I write adapters for (which is pretty easy).
+          I write adapters for (which is pretty easy)!
           <br />
           Check out my work at <a href="https://github.com/enyo/opentip/tree/develop">Github</a>.
           <br />
           This is going to be a major release (v2.0) so it won't be fully backwards compatible.<br />
-          It's going to be ready in a few weeks so get back soon!
+          The website for it will be ready in a few days or weeks so come back soon!
 
 
         </p>
