Added the ender build.

--- a/test/test.html
+++ b/test/test.html
@@ -16,7 +16,7 @@
 
 <script src="../lib/opentip.js"></script>
 
-<script src="assets/js/lib/ender.js"></script>
+<script src="ender.js"></script>
 <script>ender.noConflict();</script>
 
 <!-- Should stay first so it's the default adapter -->
