Add adapter to be used with browserify
Use it as follows:

```javascript
var Opentip = require('path/to/lib/opentip');
// jQuery shim can be done as follows:
// require('path/to/jquery');
// module.exports = $;
var jQuery = require('path/to/jquery/shim');

require('path/to/lib/adapter-browserify')(Opentip, jQuery);
```

Basicly this adapter could also be used for component.js etc.
But as I don't know how the original developer would
like to have it, I just created this as well.

Tests are not working with it as I didn't figure
out how the test for the component.js adapter works.

--- a/test/test.html
+++ b/test/test.html
@@ -23,6 +23,7 @@
 <script src="../lib/adapter-native.js"></script>
 
 <!-- <script src="../lib/adapter-component.js"></script> -->
+<!-- <script src="../lib/adapter-browserify.js"></script> -->
 
 <script src="../lib/adapter-ender.js"></script>
 
@@ -32,7 +33,7 @@
 
 
 <script>
-  mocha.ui('bdd'); 
+  mocha.ui('bdd');
   mocha.reporter('html');
 
 
