changes mocha.js to index.js so tests will run correctly

--- a/test/test.html
+++ b/test/test.html
@@ -11,7 +11,7 @@
 <script src="vendor/sinon-1.6.0.js"></script>
 
 <script src="../node_modules/mocha/mocha.js"></script>
-<script src="../node_modules/expect.js/expect.js"></script>
+<script src="../node_modules/expect.js/index.js"></script>
 
 
 <script src="../lib/opentip.js"></script>
